--- a/public/dashboard/blog/css/style.css
+++ b/public/dashboard/blog/css/style.css
@@ -282,6 +282,10 @@ textarea.input {
   background: #d341b2 !important;
 }
 
+.social-youtube {
+  background: #cc2127 !important;
+}
+
 /*=========================================================
 	NAVIGATION
 ===========================================================*/
@@ -692,6 +696,8 @@ textarea.input {
   left: 0;
   right: 0;
   bottom: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .page-header .page-header-bg:after {
@@ -1530,4 +1536,36 @@ textarea.input {
     float: left;
     margin-left: 0px;
   }
+}
+
+
+/* Custom by Nan */
+.post .post-img .post-custom {
+  width: 100%;
+  height: 13em;
+  object-fit: cover;
+}
+
+.post .post-img .hot-post-custom-kiri {
+  width: 100%;
+  height: 30.47em;
+  object-fit: cover;
+}
+
+.post .post-img .hot-post-custom-kanan {
+  width: 100%;
+  height: 15em;
+  object-fit: cover;
+}
+
+.post .post-img .list-post {
+  width: 100%;
+  height: 13em;
+  object-fit: cover;
+}
+
+.post .post-img .sidebar {
+  width: 100%;
+  height: 5em;
+  object-fit: cover;
 }
